fix: Fix spacing in shipping address
Fix span spacing in the Shipping address column of the Order Management
system.

--- a/03-frontend/angular-nikriks/src/app/components/order-management/order-management.component.css
+++ b/03-frontend/angular-nikriks/src/app/components/order-management/order-management.component.css
@@ -11,3 +11,7 @@ table.table.table-bordered th {
 .table-bordered td {
   padding: 10px;
 }
+
+span {
+  padding: 0px;
+}
